# pops

./: Cargo.toml  README.md
assets/audio/: README.md
assets/sprites/: auto-kettle.aseprite
scripts/: generate-wasm.sh
src/: asset_loader.rs  camera.rs  config.rs  input.rs  main.rs
src/main_game/: auto_kettle.rs  bank_account.rs  economy.rs  kernel.rs  layers.rs  milestones.rs  mod.rs  money.rs  skillet.rs  sound.rs  ui.rs
