[package]
name = "pops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.21.0"
bevy_kira_audio = "0.18.0"
bevy_rapier2d = { version = "0.23.0", features = [
    "debug-render-2d",
    "wasm-bindgen",
] }
bigdecimal = "0.4.2"
log = "0.4.20"
num-format = { version = "0.4.3", features = ["with-num-bigint"] }
rand = "0.8.5"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# optimize size for web release - see https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html
# TODO optimize further for final release using wasm-opt
[profile.release]
opt-level = 'z'
# lto = "thin"
# codegen-units = 1
